--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 <link rel="shortcut icon" href="/assets/images/sf_book.ico">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '//css/main.css' | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
 
 <!--[if IE]>
