--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,7 @@
 <meta charset="utf-8">
 
+<link rel="icon" type="image/png" href=/assets/images/18x18.png>
+
 {% include seo.html %}
 
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
